Updated map json

--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
   var map = new Datamap({
     element: document.getElementById('borough'),
     geographyConfig: {
-      dataUrl: 'https://gist.githubusercontent.com/theobarberbany/9c4e81f647c536d79f5b/raw/8a529b4b04729220f7cf87b0fbc783b7faeb80b0/lond.json'
+      dataUrl: 'https://gist.githubusercontent.com/theobarberbany/3da4ad6fc1a846b4a425/raw/9ba35c2d547e665e63c9d274624c4f6cab87c6b4/123.topojson'
     },
     scope: 'borough',
     fills: {
