--- a/1.html
+++ b/1.html
@@ -28,7 +28,7 @@
     done: function(datamap) {
       var that = this;
       datamap.svg.selectAll('.datamaps-subunit').on('click', function(geography) {
-        //toggleInLocalstorage(geography);
+        toggleInLocalstorage(geography);
         //that.data[geography.id.toString()] = {fillKey: 'someKey'};
         //console.log(that.data);
         var n = {};
@@ -44,17 +44,17 @@
     }
   });
 
-//  var selected = [];
-//  var toggleInLocalstorage = function(geography) {
-//    var index = selected.indexOf(geography);
-//    if(index === -1) {
-//      selected.push(geography);
-//    } else {
-//     selected.splice(index, 1);
-//    }
-//    console.log(selected);
-//    window.localStorage.setItem('selectedGeographies', JSON.stringify(selected));
-//  }
+  var selected = [];
+  var toggleInLocalstorage = function(geography) {
+    var index = selected.indexOf(geography);
+    if(index === -1) {
+      selected.push(geography);
+    } else {
+     selected.splice(index, 1);
+    }
+    console.log(selected);
+    window.localStorage.setItem('selectedGeographies', JSON.stringify(selected));
+  }
 </script>
 </body>
 </html>
